# bidi_work

./: .gitignore  CLAUDE.md  Dockerfile  README.md  docker.sh  pyproject.toml
app/: .env.template  main.py
app/my_agent/: agent.py  prompt.py  prompt_simple.py  prompt_sub_agents.py
app/my_agent/sub_agents/: __init__.py
app/my_agent/sub_agents/doctor/: __init__.py  agent.py  prompt.py
app/my_agent/sub_agents/doctor/tools/: __init__.py  trivia.py
app/my_agent/sub_agents/mysty/: __init__.py  agent.py  prompt.py
app/my_agent/sub_agents/mysty/tools/: __init__.py  fortune.py
app/static/js/: app.js
